[package]
name = "personal-blog"
version = "0.1.0"
authors = ["tyson <ihazun01@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
log = "0.4.6"
wasm-logger = "0.2.0"
js-sys = "0.3.61"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[build-dependencies]
markdown = "1.0.0-alpha.9"
chrono = "0.4.24"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
