[package]
name = "personal-blog"
version = "0.1.0"
authors = ["tyson <ihazun01@gmail.com>"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.63"
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
log = "0.4.6"
wasm-logger = "0.2.0"
js-sys = "0.3.61"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]

# [dev-dependencies]
# wasm-bindgen-test = "0.3.13"

[build-dependencies]
markdown = "1.0.0-alpha.9"
chrono = "0.4.24"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
